[package]
name = "messages"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["outbox-relay"]
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive-getters = "0.5.0"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "json"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18", features = ["v4"] }