[package]
name = "outbox-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-nats = "0.44"
dotenv = "0.15.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "json"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.18"
